--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
+remote_theme: just-the-docs/just-the-docs
 theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-feed
