--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ exclude:
    - vendor/ruby/
 
 # Set a path/url to a logo that will be displayed instead of the title
-logo: "/images/baram_512.png"
+logo: "/baram-pages/images/baram_512.png"
 
 # Enable or disable the site search
 # Supports true (default) or false
