--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ exclude:
    - vendor/ruby/
 
 # Set a path/url to a logo that will be displayed instead of the title
-logo: "/baram-pages/images/baram_512.png"
+logo: "/images/baram_logo.png"
 
 # Enable or disable the site search
 # Supports true (default) or false
@@ -149,7 +149,7 @@ callouts:
     color: red
 
 # Google Analytics Tracking (optional)
-ga_tracking: GTM-NXKN3V6
+ga_tracking: G-7XR6MJZF8R
 ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (true by default)
 
 plugins:
