--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ nav_external_links:
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: "Copyright &copy; 2017-2022 <a href=\"https://nextfoam.co.kr/index_en.php\">NEXTfoam</a>."
+footer_content: "Copyright &copy; 2017&ndash;2022 <a href=\"https://nextfoam.co.kr/index_en.php\">NEXTfoam</a>."
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
