--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ logo: "/images/baram_logo.png"
 
 # Enable or disable the site search
 # Supports true (default) or false
-search_enabled: true
+search_enabled: false
 search:
   # Split pages into sections that can be searched individually
   # Supports 1 - 6, default: 2
