--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ description: BARAM is a Free Open Source CFD(Computational Fluid Dynamics)
   software package. BARAM is developed to mitigate the steep learning curve
   of Text-based Solvers. BARAM helps you focus on problem itself with
   intuitive graphical user interface.
-baseurl: "/baram-pages" # the subpath of your site, e.g. /blog
-url: "https://nextfoam.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://baramcfd.org" # the base hostname & protocol for your site, e.g. http://example.com
 
 twitter_username: baramcfd
 github_username: jiban
